welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: value B
	var A=0; B=0; C=0; D=0;
                 ^countTeen:2: error: not found: value C
	var A=0; B=0; C=0; D=0;
                      ^countTeen:2: error: not found: value D
	var A=0; B=0; C=0; D=0;
                           ^countTeen:7: error: not found: value B
		B=1
                ^countTeen:10: error: not found: value C
		C=1
                ^countTeen:13: error: not found: value D
		D=1
                ^countTeen:15: error: not found: value B
	return A+B+C+D
                 ^