welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var A=0; B=0; C=0; D=0;
	if (13<=a && a<=19) {
		A=1
	}
	if (13<=b && b<=19) {
		B=1
	}
	if (13<=c && c<=19) {
		C=1
	}
	if (13<=d && d<=19) {
		D=1
	} 
	return A+B+C+D
}
